# calendar_v2

./: build.sh  pyproject.toml  render.yaml  requirements.txt
calendar_api/: settings.py  urls.py
events/: models.py  serializers.py  urls.py  views.py
events/migrations/: 0001_initial.py  0002_initial.py
users/: models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_customuser_name.py
