[tool.poetry]
name = "calendar-v2"
version = "0.1.0"
description = ""
authors = ["Ignacio gallo <ignacioga.346@gmail.com>"]
readme = "README.md"
packages = [{include = "calendar_v2"}]

[tool.poetry.dependencies]
python = "^3.9"
asgiref = "3.5.2"
certifi = "2022.9.14"
distlib = "0.3.6"
Django = "4.0"
django-cors-headers = "3.13.0"
djangorestframework = "3.13.1"
djangorestframework-simplejwt = "5.2.0"
filelock = "3.8.0"
install = "1.3.5"
pipenv = "2022.9.21"
pippip = "0.0.10"
platformdirs = "2.5.2"
PyJWT = "2.4.0"
pytz = "2022.2.1"
six = "1.16.0"
sqlparse = "0.4.2"
tzdata = "2022.2"
virtualenv = "20.16.5"
virtualenv-clone = "0.5.7"
dj-database-url = "^1.0.0"
psycopg2-binary = "^2.9.3"
whitenoise = {extras = ["brotli"], version = "^6.2.0"}
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
